@@ -1,0 +1,4 @@
+#!/bin/sh
+
+/usr/sbin/conntrackd -f
+/usr/sbin/conntrackd -F
